--- a/layout/base.html
+++ b/layout/base.html
@@ -34,6 +34,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'accounts:login' %}">Login<span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'accounts:signup' %}">Sign Up<span class="sr-only">(current)</span></a>
+        </li>
         {% endif %}
       </ul>
       <form class="form-inline my-2 my-lg-0">
