--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -12,7 +12,9 @@
     </div>
     <form action="" method="post">
       {% csrf_token %}
-      {{form.as_p}}
+<!--      {{form.as_p}}-->
+      <input name="username" type="text" placeholder="사용자 이름">
+      <input name="password" type="password" placeholder="비밀번호">
       <input type="submit" value="Login" class="btn btn-outline-primary">
     </form>
   </div>
