--- a/photo/templates/photo/photo_list.html
+++ b/photo/templates/photo/photo_list.html
@@ -26,8 +26,10 @@
         </ul>
         <div class="card-body">
           <a href="{% url 'photo:detail' object.id %}" class="card-link">댓글</a>
+          {% if user == object.author %}
           <a href="{% url 'photo:update' object.id %}" class="card-link">수정</a>
           <a href="{% url 'photo:delete' object.id %}" class="card-link">삭제</a>
+          {% endif %}
         </div>
 
       </div>
