--- a/photo/templates/photo/photo_delete.html
+++ b/photo/templates/photo/photo_delete.html
@@ -3,13 +3,13 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="alert alert-primary" role="alert">
+<div class="alert alert-info" role="alert">
   {{object}}를 지우겠습니까?
 </div>
 
 <form action="" method="post">
   {% csrf_token %}
-  <input type="submit" value="삭제">
+  <input type="submit" value="삭제" class="btn btn-info">
 </form>
 
 {% endblock %}
