--- a/accounts/templates/accounts/following.html
+++ b/accounts/templates/accounts/following.html
@@ -4,7 +4,12 @@
 {% endblock %}
 
 {% block content %}
-<div class="row">
+<head xmlns:align-text="http://www.w3.org/1999/xhtml">
+<!--    <link rel="stylesheet" href="signup.css">-->
+<!--        <link rel="stylesheet" href="{% static 'css/signup.css' %}">-->
+</head>
+
+<div class="row" style="margin:30px auto">
     <div class="col"></div>
     <div class="col-6" style="margin-top:30px">
         <form method="POST">
