--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -4,7 +4,12 @@
 {% endblock %}
 
 {% block content %}
-<div class="row">
+<head xmlns:align-text="http://www.w3.org/1999/xhtml">
+<!--    <link rel="stylesheet" href="signup.css">-->
+<!--        <link rel="stylesheet" href="{% static 'css/signup.css' %}">-->
+</head>
+
+<div class="row" style="margin:30px auto">
   <div class="col"></div>
   <div class="col-6">
     <div class="alert alert-primary" role="alert">
@@ -14,7 +19,9 @@
       {% csrf_token %}
 <!--      {{form.as_p}}-->
       <input name="username" type="text" placeholder="사용자 이름">
+      <br>
       <input name="password" type="password" placeholder="비밀번호">
+      <br>
       <input type="submit" value="Login" class="btn btn-outline-primary">
     </form>
   </div>
