--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -10,7 +10,7 @@
 <!--        <link rel="stylesheet" href="{% static 'css/signup.css' %}">-->
 </head>
 
-<div class="row">
+<div class="row" style="margin:30px auto">
     <div class="col"></div>
     <div class="col-6" style="margin-top:30px">
         {% if signUpFailed %}
