--- a/layout/base.html
+++ b/layout/base.html
@@ -28,7 +28,7 @@
           <a class="nav-link" href="{% url 'photo:create' %}">Upload</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'accounts:following' %}">Followings</a>
+          <a class="nav-link" href="{% url 'accounts:following' %}">Follow</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'accounts:logout' %}">Logout<span class="sr-only">(current)</span></a>
