--- a/photo/templates/photo/photo_create.html
+++ b/photo/templates/photo/photo_create.html
@@ -5,14 +5,14 @@
 <div class="row">
   <div class="col"></div>
   <div class="col-12 col-xl-8 col-md-8">
-    <div class="alert alert-primary" role="alert">
+    <div class="alert alert-info" role="alert">
       모든 영역을 다 채워주세요!
     </div>
     <form action="" method="post" enctype="multipart/form-data">
       {% csrf_token %}
 
       {{form.as_p}}
-      <input type="submit" value="Upload" class="btn btn-primary">
+      <input type="submit" value="Upload" class="btn btn-info">
     </form>
   </div>
 
