--- a/photo/templates/photo/photo_detail.html
+++ b/photo/templates/photo/photo_detail.html
@@ -16,8 +16,9 @@
         <p class="card-title">{{ object.text }}</p>
       </div>
       <div class="card-body">
-        <a href="{% url 'photo:update' object.id %}" class="card-link">수정하기</a>
-        <a href="{% url 'photo:delete' object.id %}" class="card-link">삭제하기</a>
+        <!-- <a href="{% url 'photo:update' object.id %}" class="card-link">수정하기</a>
+        <a href="{% url 'photo:delete' object.id %}" class="card-link">삭제하기</a> -->
+        <a href="#" class="card-link">댓글달기</a>
       </div>
     </div>
   </div>
