--- a/accounts/templates/accounts/following.html
+++ b/accounts/templates/accounts/following.html
@@ -15,7 +15,7 @@
             {% csrf_token %}
             <h3>친구 찾기</h3>
             <input name="username"  type="text" placeholder="사용자 이름">
-            <button type="submit" class="btn btn-primary">Follow</button>
+            <button type="submit" class="btn btn-info">Follow</button>
         </form>
         <div style="margin-top:100px">
             <h4>친구 목록</h4>
