--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -6,19 +6,18 @@
 
 {% block content %}
 <head xmlns:align-text="http://www.w3.org/1999/xhtml">
-<!--    <link rel="stylesheet" href="signup.css">-->
-<!--        <link rel="stylesheet" href="{% static 'css/signup.css' %}">-->
+
 </head>
 
 <div class="row" style="margin:30px auto">
     <div class="col"></div>
     <div class="col-6" style="margin-top:30px">
         {% if signUpFailed %}
-        <div class="alert alert-primary" role="alert">
+        <div class="alert alert-info" role="alert">
             유효하지 않은 입력입니다. 다시 입력해 주세요.
         </div>
         {% endif %}
-        <div class="alert alert-primary" role="alert">
+        <div class="alert alert-info" role="alert">
             회원 가입을 진행 해 주세요.
         </div>
         <div class="input-group">
